# OutreachForge

./: README.md  autogen_experiment.py  autogen_experiment_v2.py  email_personalization_outreach_agent.py  email_personalization_outreach_agent_final.py  email_personalization_outreach_agent_v2.py  patents_workflow.py  pyproject.toml  requirements.txt
outreachforge/: __init__.py  agents.py  app.py  compliance.py  config.py  crew_manager.py  data_governance.py  db.py  errors.py  evaluation.py  lead_store.py  logger.py  models.py  resilience.py  schemas.py  tasks.py  tasks_async.py  tracing.py  utils.py
outreachforge/agents/: __init__.py  abstract_agent.py  email_writer_agent.py  lead_sales_agent.py  ner_agent.py  sales_agent.py  search_agent.py
tests/: conftest.py  test_agents.py  test_app.py  test_pipeline.py
